# mlops_codex

./: .gitignore  Pipfile  README.md  README.org  README.pt-br.md  default.nix  pyproject.toml  requirements.txt  setup.py  shell.nix  test.yml
.github/workflows/: lint.yaml  publish.yml  sphinx.yml  test.yml
docs/source/: automl_parameters.rst  base.rst  conf.py  connecting_datasource.rst  connecting_to_mlops.rst  connecting_to_neomaril.rst  datasource.rst  deploying.rst  exceptions.rst  external_monitoring.rst  index.rst  logging.rst  mlops_codex.rst  mlops_datasets.rst  model.rst  modules.rst  monitoring_parameters.rst  neomaril_codex.logging.rst  neomaril_codex.model.rst  neomaril_codex.rst  neomaril_codex.training.rst  pipeline.rst  preprocessing.rst  preprocessing_guide.rst  starters.rst  training.rst  training_guide.rst
neomaril-logger/: __init__.py  loggerBuilder  neomaril-logger.py
neomaril_codex/: __init__.py  connector.hy  loggerBuilder.hy  neomaril_logger.hy
neomaril_logger/: __init__.py  neomaril_logger.py
notebooks/: .env  .env.example  Admin.ipynb  Datasets.ipynb  Datasources.ipynb  ExternalMonitoring.ipynb  ExternalTraining.ipynb  Logging.ipynb  Model.ipynb  Pipeline.ipynb  Preprocessing.ipynb  README.md  Training.ipynb  TrainingV2.ipynb  connector.ipynb  extra.txt  logging.ipynb
notebooks/samples/: pipeline-just-model.yml  pipeline.yml
notebooks/samples/AutoML/: conf.json  dados.csv
notebooks/samples/asyncModel/: app-with-bandit-error.py  app-with-import-error.py  app-with-logging.py  app.py  input.csv  model.pkl  requirements.txt  schema.csv
notebooks/samples/asyncPreprocessing/: app.py  input.csv  requirements.txt  schema.csv  schema.json
notebooks/samples/asyncPreprocessingMultiple/: app.py  requirements.txt
src/V2/: constants.py
src/mlops_codex/: __init__.py  __utils.py  base.py  constants.py  dataset.py  datasources.py  external_monitoring.py  http_request_handler.py  model.py  pipeline.py  preprocessing.py  training.py  validations.py
src/neomaril_codex/: __model_states.py  __utils.py  _base.py  _exceptions.py  base.py  connector.py  datasources.py  exceptions.py  external_monitoring.py  logger_config.py  logging.hy  logging.py  model.py  pipeline.py  preprocessing.py  training.py
src/utils/: model_states.py
tests/: import.py
(+119 files in other folders)
