[tool.poetry]
name = "neomaril-codex"
version = "0.1.0"
description = "Package for interacting with Neomaril, a tool for deploying ML models."
authors = ["jonathan.carvalho <jonathan.carvalho@datarisk.io>"]

[tool.poetry.dependencies]
python = "^3.8"
hy = "1.0a1"
funcparserlib = "1.0.0a0"
requests = "2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
