[tool.poetry]
name = "neomaril-codex"
version = "0.1.0"
description = "Package for interacting with Neomaril, a tool for deploying ML models."
authors = ["jonathan.carvalho <jonathan.carvalho@datarisk.io>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "2.26.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
