[project]
name = "datarisk-mlops-codex"
version = "4.0.2"
description = "A Python SDK for interacting with the DataRisk MLOps API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cachetools==6.2.1",
    "loguru>=0.7.3",
    "pydantic-core==2.41.4",
    "pydantic[email]==2.12.3",
    "requests==2.32.5",
]
license = "MIT"
license-files = ["LICENSE.txt"]

[project.scripts]
main = "mlops_codex:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "docs/",
    ".github/",
    "notebooks/",
    "tests/"
]

[tool.hatch.build.targets.wheel]
packages = ["src/mlops_codex"]

[dependency-groups]
dev = [
    "m2r2==0.3.4",
    "pydata-sphinx-theme==0.16.1",
    "pyright==1.1.406",
    "ruff==0.14.0",
    "sphinx==8.1.3",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 88
indent-width = 4
include = ["pyproject.toml", "src/**/*.py", "scripts/**/*.py"]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'
indent-style = "space"
docstring-code-line-length = "dynamic"
exclude = ["*.pyi", "*.ipynb"]

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check src/ --fix && ruff format src/'
